fixed homepage 'how it works' text alignment

--- a/scss/pages/home.scss
+++ b/scss/pages/home.scss
@@ -45,6 +45,10 @@
   }
 }
 
+.how-it-works-text-wrapper {
+  text-align: left;
+}
+
 .site-versions-text-wrapper i {
   display: block;
   font-size: 14px;
